   but options with the 'tls' prefix are preferred.
 * Added a MuteAudio AMI action for muting inbound and/or outbound audio
   in a channel. (res_mutestream.so)
 * The configuration file manager.conf now supports a channelvars option, which
   specifies a list of channel variables to include in each channel-oriented
   event.

Channel Event Logging
---------------------
 * A new interface, CEL, is introduced here. CEL logs single events, much like
   the AMI, but it differs from the AMI in that it logs to db backends much
   like CDR does; is based on the event subsystem introduced by Russell, and
   can share in all its benefits; allows multiple backends to operate like CDR;
   is specialized to event data that would be of concern to billing sytems,
   like CDR. Backends for logging and accounting calls have been produced,
   but a new CDR backend is still in development.

CDR
---
 * 'linkedid' and 'peeraccount' are new CDR fields available to CDR officianados.
   linkedid is based on uniqueID, but spreads to other channels as transfers, dials,
   etc are performed. Thus the peices of CDR can be grouped into multilegged sets.
 * Multiple files and formats can now be specified in cdr_custom.conf.
 * cdr_syslog has been added which allows CDRs to be written directly to syslog.
   See configs/cdr_syslog.conf.sample for more information.
 * A 'sequence' field has been added to CDRs which can be combined with
   linkedid or uniqueid to uniquely identify a CDR.

Calendaring for Asterisk
------------------------
 * A new set of modules were added supporing calendar integration with Asterisk.
   Dialplan functions for reading from and writing to calendars are included,
   as well as the ability to execute dialplan logic upon calendar event notifications.
   iCalendar, CalDAV, and Exchange Server calendars are supported (Exchange support
   only tested on Exchange Server 2003 with no support for forms-based authentication).

Multicast RTP Support
---------------------